8540: Fix vertical spacing

--- a/app/assets/stylesheets/all/components/responses/hierarchical_form/_metadata.scss
+++ b/app/assets/stylesheets/all/components/responses/hierarchical_form/_metadata.scss
@@ -1,5 +1,6 @@
 .response-form .metadata {
   background-color: $super-light-gray;
+  margin-bottom: 20px;
   padding: 20px;
 
   h3 {
